@@ -66,6 +66,7 @@ if (empty($CFG->authloginviaemail)) {
         </div>
       </div>
 
+
 <?php if ($CFG->guestloginbutton and !isguestuser()) {  ?>
       <div class="subcontent guestsub">
         <div class="desc">
@@ -122,8 +123,3 @@ if (empty($CFG->authloginviaemail)) {
     </div>
 <?php } ?>
 </div>
-<?php
-//XTEC ************ AFEGIT - To make Google Auth2 work
-//2014.08.18 @pferre22
-require_once($CFG->dirroot . '/auth/googleoauth2/lib.php'); echo auth_googleoauth2_render_buttons();
-//************ FI
